[project]
name = "shield-audio-downloader"
version = "0.2.0"
description = "Download & cut audio from TikTok & Instagram with waveform preview"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.35.0",
    "yt-dlp>=2024.1.1",
    "librosa>=0.10.0",
    "plotly>=5.17.0",
    "numpy>=1.24.0",
]
